<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:clipToPadding="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_title"
        style="@style/MomentTitle"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnCreateTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MomentPrimaryButton"
        android:text="@string/create_task"
        android:layout_marginBottom="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvTasksEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_active_tasks"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:visibility="gone"
        android:paddingTop="12dp" />

</LinearLayout>

